--- a/templates/petpatas/about.html
+++ b/templates/petpatas/about.html
@@ -41,12 +41,14 @@
                             <div class="featured-block">
                                 <h2 class="mb-4">Nossa historia começou em 2016</h2>
 
-                                <p>Tooplate website provides a variety of latest HTML templates or Bootstrap 5 Themes for your <a href="#">business websites</a>.</p>
+                                <p>Nossa história começou em 2017 quando no quintal da minha casa surgiu o primeiro Petpatas</a>.</p>
 
-                                <p>Clean Work is a blue color theme HTML CSS template for your company website. You may use this template for any purpose.</p>
+                                <p>Lá foi o inicio desse sonho, conheci pessoas incriveis e pude consolidar que era aquilo que eu queria para minha vida, então ao 
+                                    decorrer dos anos fui me aperceiçoando como profissional e me dedicando cada vez mais, com isso viream muitos sorrisos,
+                                 banhos, tosas e clientes satisfeitos.</p>
 
-                                <a class="custom-btn btn button button--atlas mt-3" href="contact.html">
-                                    <span>Get in touch</span>
+                               <!-- <a class="custom-btn btn button button--atlas mt-3" href="contact.html">
+                                    <span>Get in touch</span>-->
     
                                     <div class="marquee" aria-hidden="true">
                                         <div class="marquee__inner">
