--- a/templates/petpatas/services.html
+++ b/templates/petpatas/services.html
@@ -18,7 +18,7 @@
                                 <ol class="breadcrumb justify-content-center">
                                     <li class="breadcrumb-item"><a href="{% url 'index' %}">Home</a></li>
 
-                                    <li class="breadcrumb-item active" aria-current="page">Services Listing</li>
+                                    <li class="breadcrumb-item active" aria-current="page">Serviços</li>
                                 </ol>
                             </nav>
                         </div>
