--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -1,31 +1,5 @@
 {% load static %}
-<section class="partners-section">
-    <div class="container">
-        <div class="row justify-content-center align-items-center">
 
-            <div class="col-lg-12 col-12">
-                <h4 class="partners-section-title bg-white shadow-lg">Nós usamos os melhores produtos!</h4>
-            </div>
-
-            <div class="col-lg-2 col-md-4 col-6">
-                <img src="{% static 'images/partners/essenciapet.png' %}" class="partners-image img-fluid">
-            </div>
-
-            <div class="col-lg-2 col-md-4 col-6">
-                <img src="{% static 'images/partners/harlow.jpg' %}" class="partners-image img-fluid">
-            </div>
-
-            <div class="col-lg-2 col-md-4 col-6">
-                <img src="{% static 'images/partners/choyer.jpg' %}" class="partners-image img-fluid">
-            </div>
-
-            <div class="col-lg-2 col-md-4 col-6">
-                <img src="{% static 'images/partners/societyhidra.png' %}" class="partners-image img-fluid">
-            </div>
-
-        </div>
-    </div>
-</section>
 </main>
 
 <footer class="site-footer">
@@ -53,28 +27,28 @@
 
                 <ul class="footer-menu">
                     <li class="footer-menu-item">
-                        <a href="#" class="footer-menu-link">
+                        <a href="{% url 'service' %}" class="footer-menu-link">
                             <i class="bi-chevron-double-right footer-menu-link-icon me-2"></i>
                             Tosa completa
                         </a>
                     </li>
 
                     <li class="footer-menu-item">
-                        <a href="#" class="footer-menu-link">
+                        <a href="{% url 'service' %}" class="footer-menu-link">
                             <i class="bi-chevron-double-right footer-menu-link-icon me-2"></i>
                             Banho
                         </a>
                     </li>
 
                     <li class="footer-menu-item">
-                        <a href="#" class="footer-menu-link">
+                        <a href="{% url 'service' %}" class="footer-menu-link">
                             <i class="bi-chevron-double-right footer-menu-link-icon me-2"></i>
                             Tosa higiênica
                         </a>
                     </li>
 
                     <li class="footer-menu-item">
-                        <a href="#" class="footer-menu-link">
+                        <a href="{% url 'service' %}" class="footer-menu-link">
                             <i class="bi-chevron-double-right footer-menu-link-icon me-2"></i>
                             Corte de unhas
                         </a>
@@ -87,7 +61,7 @@
 
                 <p class="primary-color d-flex mt-3 mb-2">
                     <i class="bi-geo-alt-fill me-2"></i>
-                    Akershusstranda 20, 0150 Oslo, Norway
+                    Av. Pref. Raphael Vitiello - Vila Zilda, Guarujá - SP, 11436-000
                 </p>
 
                 <p class="primary-color d-flex mb-2">
@@ -124,7 +98,7 @@
             </div>
 
             <div class=" primary-color col-lg-3 col-md-6 col-6 mt-3 mt-lg-0 mt-md-0">
-                <div class="featured-block">
+               
                     <h5 class="text-white mb-3">Atendimento</h5>
 
                     <strong class="d-block primary-color mb-1">Seg - Sex</strong>
@@ -134,7 +108,12 @@
                     <strong class="d-block primary-color mb-1">Sab</strong>
 
                     <p class="primary-color mb-0">9:00 AM - 16:00 PM</p>
-                </div>
+
+                    <strong class="d-block primary-color mb-1">Feriados</strong>
+
+                    <p class="primary-color mb-0">9:00 AM - 16:00 PM</p>
+
+              
             </div>
         </div>
     </div>
