--- a/templates/partials/_header.html
+++ b/templates/partials/_header.html
@@ -17,9 +17,22 @@
                 <p class="site-header-icon-wrap text-white d-flex mb-0 ms-auto">
                     <i class="site-header-icon bi-whatsapp me-2"></i>
 
-                    <a href="https://api.whatsapp.com/send/?phone=13991467846&text=Olá+Gostaria+de+saber+sobre+os+preços&type=phone_number&app_absent=0" target="_blank" class="text-white">
+                    <a href="https://api.whatsapp.com/send/?phone=13991467846&text=Olá,+Gostaria+de+saber+sobre+os+preços+dos+serviços&type=phone_number&app_absent=0" target="_blank" class="text-white">
                         (13) 99146-7846
                     </a>
+                    </p>
+                {% if request.user.is_authenticated  %}
+                    <p class="site-header-icon-wrap text-white d-flex mb-0 ms-auto">Bem vindo(a): <strong class="me-2"> &nbsp;{{ request.user.username }} </strong> </p>
+                    <p class="site-header-icon-wrap text-white d-flex mb-0 ms-auto">    
+                        <a href="{% url 'logout' %}" class="text-white">
+                            Logout
+                        </a>
+                {% else %}
+                    <p class="site-header-icon-wrap text-white d-flex mb-0 ms-auto">    
+                        <a href="{% url 'login' %}" class="text-white">
+                            Login Cliente
+                        </a>
+                {% endif %}
                 </p>
             </div>
 
@@ -27,15 +40,20 @@
     </div>
 </header>
 
+
 <nav class="navbar navbar-expand-lg">
+        
     <div class="container">
         <a class="navbar-brand" href="{% url 'index' %}">
             <img src="{% static 'images/logos/logopetpatas.png' %}" class="col-lg-6 col-12 custom-block-wrap" alt=""> <!-- class="logo img-fluid" -->
         </a>
-
+        
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
+            
         </button>
+            
+
 
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
@@ -69,4 +87,9 @@
             </ul>
         </div>
     </div>
+    {% for message in messages %}
+    <div class="alert alert-primary" role="alert">
+        <p id="messages">{{message}}</p>
+    </div>
+    {% endfor %}
 </nav>
