--- a/templates/petpatas/index.html
+++ b/templates/petpatas/index.html
@@ -109,7 +109,7 @@
                                     <div class="col-lg-7 col-md-7 col-12 d-flex align-items-center">
                                         <div class="services-info mt-4 mt-lg-0 mt-md-0">
                                             <h4 class="services-title mb-1 mb-lg-2">
-                                                <a class="services-title-link" href="services-detail.html">{{servico.nome}}</a>
+                                                <a class="services-title-link" href="services-detail.html">{{servico.nome_servico}}</a>
                                             </h4>
 
                                             <p>{{servico.descricao}}</p>
@@ -286,6 +286,34 @@
                             </div>
                         </div>
                        
+                </div>
+            </section>
+
+            <section class="partners-section">
+                <div class="container">
+                    <div class="row justify-content-center align-items-center">
+            
+                        <div class="col-lg-12 col-12">
+                            <h4 class="partners-section-title bg-white shadow-lg">Nós usamos os melhores produtos!</h4>
+                        </div>
+            
+                        <div class="col-lg-2 col-md-4 col-6">
+                            <img src="{% static 'images/partners/essenciapet.png' %}" class="partners-image img-fluid">
+                        </div>
+            
+                        <div class="col-lg-2 col-md-4 col-6">
+                            <img src="{% static 'images/partners/harlow.jpg' %}" class="partners-image img-fluid">
+                        </div>
+            
+                        <div class="col-lg-2 col-md-4 col-6">
+                            <img src="{% static 'images/partners/choyer.jpg' %}" class="partners-image img-fluid">
+                        </div>
+            
+                        <div class="col-lg-2 col-md-4 col-6">
+                            <img src="{% static 'images/partners/societyhidra.png' %}" class="partners-image img-fluid">
+                        </div>
+            
+                    </div>
                 </div>
             </section>
 
