Adicionando o map e ajustando pagina about

--- a/templates/petpatas/about.html
+++ b/templates/petpatas/about.html
@@ -44,21 +44,21 @@
                                 <p>Nossa história começou em 2017 quando no quintal da minha casa surgiu o primeiro Petpatas</a>.</p>
 
                                 <p>Lá foi o inicio desse sonho, conheci pessoas incriveis e pude consolidar que era aquilo que eu queria para minha vida, então ao 
-                                    decorrer dos anos fui me aperceiçoando como profissional e me dedicando cada vez mais, com isso viream muitos sorrisos,
-                                 banhos, tosas e clientes satisfeitos.</p>
-
+                                 decorrer dos anos fui me aperceiçoando como profissional e me dedicando cada vez mais, com isso vieram muitos sorrisos,
+                                 banhos, tosas e clientes satisfeitos.
+                                </p>
+                                <p>
+                                    Com o passar do tempo o petpatas cresceu e fez seu nome, sendo reconhecido e amado por todos que já o visitaram,
+                                     oferecendo serviços de alta qualidade e atendimento personalizado para cada animal que chegava ao nosso estabelecimento.
+                                </p>
+                                <p>Nós continuamos a nos dedicar ao trabalho com paixão e comprometimento, sabendo que cada animal que entra na loja recebe 
+                                 os melhores cuidados e atenção e amor que merece.
+                                </p>       
                                <!-- <a class="custom-btn btn button button--atlas mt-3" href="contact.html">
                                     <span>Get in touch</span>-->
     
-                                    <div class="marquee" aria-hidden="true">
-                                        <div class="marquee__inner">
-                                            <span>Get in touch</span>
-                                            <span>Get in touch</span>
-                                            <span>Get in touch</span>
-                                            <span>Get in touch</span>
-                                        </div>
-                                    </div>
-                                </a>
+                                    
+                                
                             </div>
                         </div>
 
@@ -72,52 +72,25 @@
                     <div class="row">
 
                         <div class="col-lg-12 col-12">
-                            <h2 class="mb-4">Meet People</h2>
+                            <h2 class="mb-4">Conheça quem cuida do seu pet</h2>
                         </div>
 
                         <div class="col-lg-3 col-md-6 col-12 mb-lg-0 mb-md-5">
-                            <img src="{% static 'images/teams/young-cleaning-man-wearing-casual-clothes.jpg' %}" class="team-image img-fluid">
+                            <img src="{% static 'images/teams/antonia.jpg' %}" class="team-image img-fluid">
                         </div>
 
                         <div class="col-lg-3 col-md-6 col-12 d-flex justify-content-lg-center mt-4 mt-lg-0 mt-md-0 mb-5 mb-lg-0">
                             <div class="team-info mx-auto mx-lg-0">
-                                <h4 class="mb-2">Josh</h4>
+                                <h4 class="mb-2">Antonia (Dona)</h4>
 
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing tempor incididunt dolore magna</p>
+                                <p>Os clientes se sentem confortaveis em trazer seus pets aqui no petpatas pois sabem
+                                     que além de uma tosadora, seus bichinhos estão nas mãos de uma auxiliar de veterinaria
+                                      que já trabalhou em um consultoria auxiliando em cirurgias complexas em diversos animais.</p>
 
-                                <div class="border-top mt-3 pt-3">
-                                    <p class="d-flex mb-0">
-                                        <i class="bi-whatsapp me-2"></i>
-
-                                        <a href="tel: 110-220-9800">
-                                            110-220-9800
-                                        </a>
-                                    </p>
-                                </div>
                             </div>
                         </div>
 
-                        <div class="col-lg-3 col-md-6 col-12">
-                            <img src="{% static 'images/teams/happy-young-woman-wiping-kitchen-counter-wearing-yellow-gloves.jpg' %}" class="team-image img-fluid">
-                        </div>
-
-                        <div class="col-lg-3 col-md-6 col-12 d-flex justify-content-lg-center mt-4 mt-lg-0 mt-md-0">
-                            <div class="team-info mx-auto mx-lg-0">
-                                <h4 class="mb-2">Marie</h4>
-
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing tempor incididunt dolore magna</p>
-
-                                <div class="border-top mt-3 pt-3">
-                                    <p class="d-flex mb-0">
-                                        <i class="bi-whatsapp me-2"></i>
-
-                                        <a href="tel: 110-220-9800">
-                                            110-220-9800
-                                        </a>
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
+                        
 
                     </div>
                 </div>
