--- a/templates/petpatas/base.html
+++ b/templates/petpatas/base.html
@@ -10,6 +10,8 @@
 
         <title>&#128054; PetPatas Banho e tosa</title>
 
+        <link rel="shortcut icon" href="{% static 'images/icons/petpatas.ico' %}" type="image/x-icon">
+        
         <!-- CSS FILES -->        
         <link rel="preconnect" href="https://fonts.googleapis.com">
         
