--- a/templates/petpatas/index.html
+++ b/templates/petpatas/index.html
@@ -178,7 +178,7 @@
                                     </div>
                                 </div>
 
-                                <p class="mb-0">Best Cleaning Service Provider Ipsum dolor sit consectetur kengan</p>
+                                <p class="mb-0">Lugar super de confiança, cuidaram do meu pet e deixaram ele bem cheiroso, voltarei mais vezes!</p>
                             </div>
 
                             <div class="featured-block mb-lg-0">
@@ -186,7 +186,7 @@
                                     <img src="{% static 'images/avatar/happy-customer-02.jpg' %}" class="avatar-image img-fluid">
 
                                     <div class="ms-3">
-                                        <h4 class="mb-0">Nana</h4>
+                                        <h4 class="mb-0">Fernanda</h4>
 
                                         <div class="reviews-icons mb-1">
                                             <i class="bi-star-fill"></i>
@@ -198,7 +198,7 @@
                                     </div>
                                 </div>
 
-                                <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                                <p class="mb-0">Meu gato nunca havia ido a um petshop, levei ele no petpatas e não tive problemas, super recomendo!</p>
                             </div>
                         </div>
 
@@ -208,7 +208,7 @@
                                     <img src="{% static 'images/avatar/happy-customer-03.jpg' %}" class="avatar-image img-fluid">
 
                                     <div class="ms-3">
-                                        <h4 class="mb-0">Elon</h4>
+                                        <h4 class="mb-0">Daniel</h4>
 
                                         <div class="reviews-icons mb-1">
                                             <i class="bi-star-fill"></i>
@@ -220,7 +220,7 @@
                                     </div>
                                 </div>
 
-                                <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                                <p class="mb-0">Adorei o carinho e o cuidado que eles tiveram com meu cachorro, ele voltou bem cheiroso e de gravatinha.</p>
                             </div>
 
                             <div class="featured-block mb-lg-0">
@@ -228,19 +228,19 @@
                                     <img src="{% static 'images/avatar/happy-customer-04.jpg' %}" class="avatar-image img-fluid">
 
                                     <div class="ms-3">
-                                        <h4 class="mb-0">Josh</h4>
+                                        <h4 class="mb-0">Jonathan</h4>
 
                                         <div class="reviews-icons mb-1">
                                             <i class="bi-star-fill"></i>
                                             <i class="bi-star-fill"></i>
                                             <i class="bi-star-fill"></i>
-                                            <i class="bi-star"></i>
+                                            <i class="bi-star-fill"></i>
                                             <i class="bi-star"></i>
                                         </div>
                                     </div>
                                 </div>
 
-                                <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                                <p class="mb-0">Levei meu coelho lá e deu tudo certo, ele voltou lindo e bem cheiroso!</p>
                             </div>
                         </div>
 
@@ -250,7 +250,7 @@
                                     <img src="{% static 'images/avatar/happy-customer-05.jpg' %}" class="avatar-image img-fluid">
 
                                     <div class="ms-3">
-                                        <h4 class="mb-0">Katie</h4>
+                                        <h4 class="mb-0">Katia</h4>
 
                                         <div class="reviews-icons mb-1">
                                             <i class="bi-star-fill"></i>
@@ -262,7 +262,7 @@
                                     </div>
                                 </div>
 
-                                <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                                <p class="mb-0">Levo meu cachorro no petpatas a mais de um ano e ele sempre é muito bem tratado, não troco de lugar por nada.</p>
                             </div>
 
                             <div class="featured-block mb-lg-0">
@@ -270,19 +270,19 @@
                                     <img src="{% static 'images/avatar/happy-customer-06.jpg' %}" class="avatar-image img-fluid">
 
                                     <div class="ms-3">
-                                        <h4 class="mb-0">Shai</h4>
+                                        <h4 class="mb-0">Samuel</h4>
 
                                         <div class="reviews-icons mb-1">
                                             <i class="bi-star-fill"></i>
                                             <i class="bi-star-fill"></i>
                                             <i class="bi-star-fill"></i>
-                                            <i class="bi-star"></i>
-                                            <i class="bi-star"></i>
+                                            <i class="bi-star-fill"></i>
+                                            <i class="bi-star-fill"></i>
                                         </div>
                                     </div>
                                 </div>
 
-                                <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+                                <p class="mb-0">Super cuidadosos, trataram meu cachorro como rei, além do banho com shampoo antipulgas, amei!</p>
                             </div>
                         </div>
                        
