Atualizando Requiriments.txt

--- a/templates/petpatas/index.html
+++ b/templates/petpatas/index.html
@@ -19,15 +19,15 @@
                                 </span>
                             </h1>
 
-                            <a class="custom-btn btn button button--atlas smoothscroll me-3" href="#intro-section">
+                            <a class="custom-btn btn button button--atlas smoothscroll me-3" href="{% url 'about' %}">
                                 <span>Introdução</span>
 
                                 <div class="marquee" aria-hidden="true">
                                     <div class="marquee__inner">
-                                        <span>Introduction</span>
-                                        <span>Introduction</span>
-                                        <span>Introduction</span>
-                                        <span>Introduction</span>
+                                        <span>Introdução</span>
+                                        <span>Introdução</span>
+                                        <span>Introdução</span>
+                                        <span>Introdução</span>
                                     </div>
                                 </div>
                             </a>
